Took steps to prevent display overflow: Reduced font size for display, limited length of number entered, added functionality to return answer in scientific notation if too long.

--- a/calculator.css
+++ b/calculator.css
@@ -51,7 +51,7 @@ body {
 
 #display {
     color: white;
-    font-size: 92px;
+    font-size: 68px;
     font-weight: 300;
     padding-right: 10px;
     background-color: black;
